fix: 2 cards  per row on tablet and 1 per row on mobile device

--- a/src/components/pages/adventure.css
+++ b/src/components/pages/adventure.css
@@ -49,25 +49,16 @@ h2{
     }
 
     .grid-container{
-        grid-template-columns:  repeat(3, 1fr);
+        grid-template-columns:  repeat(2, 1fr);
     }
+    
 }
 
 /* MOBILE RESPONSIVENESS */
 @media screen and (max-width: 600px){
     .grid-container{
-        grid-template-columns:  repeat(2, 1fr);
-    }
-}
-
-/* SMALL SCREEN MOBILE RESPONSIVENESS */
-@media screen and (max-width: 400px){
-    .grid-container{
         grid-template-columns:  repeat(1, 1fr);
     }
-
-    .grid-item{
-        padding: 10px;
-    }
 }
+
 
