--- a/src/components/pages/header.css
+++ b/src/components/pages/header.css
@@ -83,6 +83,7 @@
 @media screen and (max-width: 600px){
     .hero{
         flex-direction: column;
+        padding-bottom: 3rem;
     }
 
     .hero .text_container, .img_container{
